# PythonResumption

./: README.md  pyproject.toml
src/: __main__.py  test.py  test_source.py
src/Resumption/: Resume.py  __init__.py
src/Resumption/BytecodePatcher/: Patcher.py  __init__.py
src/Resumption/JumpPairs/: Definitions.py  Parser.py  __init__.py
tests/: test_backward_jump.py  test_dangling_destination.py  test_duplicate_destinations.py  test_forward_jump.py  test_missing_destination.py  test_multiple_origins_forward.py
